--- a/SHAREKARO/server/vercel.json
+++ b/SHAREKARO/server/vercel.json
@@ -1,12 +1,12 @@
 {
   "version": 2,
-  "builds": {
+  "builds": [
     { "src": "*.js", "use": "@vercel/node"}
-  },
-"routes": {
+  ],
+"routes": [
   {
-  "src": "/(.*)",
-  "dest": "/"
+    "src": "/(.*)",
+    "dest": "/"
   }
-}
+]
 }
